--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
 	</header>
 	<nav>
 		<div class="button-container">
+			<button class="btn">Introducción</button>
 			<button class="btn">Quienes Somos</button>
+			<button class="btn">Servicios</button>
 			<button class="btn">Estándares</button>
 			<div class="dropdown">
 			  <button class="btn dropbtn">Noticias</button>
